<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtk_observer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bobh@zendee.cn">bobh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>vectornav_msgs</exec_depend>
  <exec_depend>a2rl_bs_msgs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
